Migrate to Java 17